[gd_scene load_steps=11 format=2]

[ext_resource path="res://entity/turret/guided_missile/turret_body.obj" type="ArrayMesh" id=1]
[ext_resource path="res://entity/turret/guided_missile/guided_missile.gd" type="Script" id=2]
[ext_resource path="res://entity/projectile/guided_missile_ammo/missile.obj" type="ArrayMesh" id=3]
[ext_resource path="res://entity/projectile/guided_missile_ammo/guided_missile_ammo.tscn" type="PackedScene" id=4]

[sub_resource type="SpatialMaterial" id=10]
albedo_color = Color( 0.521569, 0.521569, 0.521569, 1 )

[sub_resource type="SpatialMaterial" id=11]
albedo_color = Color( 0.254902, 0.254902, 0.254902, 1 )

[sub_resource type="SpatialMaterial" id=7]
albedo_color = Color( 0.34902, 0.34902, 0.34902, 1 )

[sub_resource type="SpatialMaterial" id=8]
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="CylinderMesh" id=12]
top_radius = 0.01
bottom_radius = 0.01
height = 1.0

[sub_resource type="SpatialMaterial" id=13]
flags_transparent = true
flags_unshaded = true
albedo_color = Color( 1, 0, 0, 0.780392 )

[node name="guided_missile" type="Spatial"]
script = ExtResource( 2 )
aiming_speed = 2.0
projectile = ExtResource( 4 )
attack_damage = 75
ammo = 1
max_ammo = 1
reload_time = 10.0
fire_rate = 2.0
body = NodePath("body")
gun = NodePath("body/gun")

[node name="body" type="Spatial" parent="."]

[node name="base" type="MeshInstance" parent="body"]
mesh = ExtResource( 1 )
skeleton = NodePath("../..")
software_skinning_transform_normals = false
material/0 = SubResource( 10 )
material/1 = SubResource( 11 )

[node name="missiles" type="Spatial" parent="body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0532667, 0.265998, 0 )

[node name="missile_1" type="MeshInstance" parent="body/missiles"]
transform = Transform( 1.3, 0, 0, 0, 1.3, 0, 0, 0, 1.3, 0, 0, 0 )
mesh = ExtResource( 3 )
skeleton = NodePath("../..")
software_skinning_transform_normals = false
material/0 = SubResource( 7 )
material/1 = SubResource( 8 )

[node name="gun" type="Spatial" parent="body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.150686, 0 )

[node name="laser" type="MeshInstance" parent="body/gun"]
transform = Transform( 1, 0, 0, 0, 0.000453786, 1, 0, -1, 0.000453786, -0.0811684, 0.0686523, -0.568907 )
visible = false
mesh = SubResource( 12 )
software_skinning_transform_normals = false
material/0 = SubResource( 13 )

[node name="laser_pointing" type="Position3D" parent="body/gun"]

[node name="from" type="Position3D" parent="body/gun"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0516439, 0.116657, -0.34869 )

[node name="guided_timeout" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="guided_timeout" to="." method="_on_guided_timeout_timeout"]
